@@ -135,6 +135,7 @@ struct options_t {
   struct in_addr uamlogout;      /* IP address of HTTP auto-logout */
   struct in_addr uamalias;       /* IP address of UAM Alias */
   char *uamaliasname;            /* Simple hostname (no dots) DNS name for uamalias */
+  char *uamhostname;             /* Simple hostname (no dots) DNS name for uamlisten */
 
   /* booleans */
   uint8_t allowdyn:1;               /* Allow dynamic address allocation */
